--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' content='A Shoes Shopping Website created using HTML and CSS!'>
+    <meta name='keywords' content='Shoes, Shopping, HTML, CSS'>
+    <meta name='author' content='Harsh Jadhav'>
     <title>Great Shoes</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;900&display=swap">
     <link rel="stylesheet" href="css/style.css">
